[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Cave/cave_small.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Cave/Cave.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.5, 38 )

[node name="Cave" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 7.62939e-06, -2 )
scale = Vector2( 0.464286, 0.769406 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -14.5, 39 )
shape = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -101, 77, -93, -74, 85, -81, 83, 81, 15, 80, 12, -4, -42, -4, -42, 75 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
